# RFID_Beamformer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
global/: global.hpp  struct_global.hpp
misc/calibration_data/: ant0_-10.0dB_cal_data  ant0_-10.5dB_cal_data  ant0_-11.0dB_cal_data  ant0_-11.5dB_cal_data  ant0_-12.0dB_cal_data  ant0_-12.5dB_cal_data  ant0_-13.0dB_cal_data  ant0_-13.5dB_cal_data  ant0_-14.0dB_cal_data  ant0_-14.5dB_cal_data  ant0_-15.0dB_cal_data  ant0_-15.5dB_cal_data  ant0_-16.0dB_cal_data  ant0_-16.5dB_cal_data  ant0_-17.0dB_cal_data  ant0_-17.5dB_cal_data  ant0_-18.0dB_cal_data  ant0_-18.5dB_cal_data  ant0_-19.0dB_cal_data  ant0_-19.5dB_cal_data  ant0_-20.0dB_cal_data  ant0_-20.5dB_cal_data  ant0_-21.0dB_cal_data  ant0_-21.5dB_cal_data  ant0_-22.0dB_cal_data  ant0_-3.0dB_cal_data  ant0_-3.5dB_cal_data  ant0_-4.0dB_cal_data  ant0_-4.5dB_cal_data  ant0_-5.0dB_cal_data  ant0_-5.5dB_cal_data  ant0_-6.0dB_cal_data  ant0_-6.5dB_cal_data  ant0_-7.0dB_cal_data  ant0_-7.5dB_cal_data  ant0_-8.0dB_cal_data  ant0_-8.5dB_cal_data  ant0_-9.0dB_cal_data  ant0_-9.5dB_cal_data  ant10_-10.0dB_cal_data  (+584 more)
src/: Beamformer.cpp  Beamformer.hpp  CMakeLists.txt  Logger.cpp  Logger.hpp  beamforming.cpp  beamforming_main.cpp  calibrator_main.cpp  main.cpp
src/Beam_algo/: Agent_beamtrainer.cpp  Agent_beamtrainer.hpp  Beam_algorithm.cpp  Beam_algorithm.hpp  Beamtrainer.cpp  Beamtrainer.hpp  CA_kalmaned_with_random_beamtrainer.cpp  CA_kalmaned_with_random_beamtrainer.hpp  CA_with_directional_beamtrainer.cpp  CA_with_directional_beamtrainer.hpp  CA_with_random_beamtrainer.cpp  CA_with_random_beamtrainer.hpp  CMakeLists.txt  Directional_beamtrainer.cpp  Directional_beamtrainer.hpp  Directional_with_refining_beamtrainer.cpp  Directional_with_refining_beamtrainer.hpp  Directional_with_refining_beamtrainer2.cpp  Directional_with_refining_beamtrainer2.hpp  Fixed_beamtrainer.cpp  Fixed_beamtrainer.hpp  Kalmaned_with_random_beamtrainer.cpp  Kalmaned_with_random_beamtrainer.hpp  Random_beamtrainer.cpp  Random_beamtrainer.hpp  Test_beamtrainer.cpp  Test_beamtrainer.hpp
src/Beam_algo/common/: Beam_util.cpp  Beam_util.hpp  CA_calculator.cpp  CA_calculator.hpp  CMakeLists.txt  Kalmaned_CA_calculator.cpp  Kalmaned_CA_calculator.hpp
src/Calibrator/: CMakeLists.txt  Calibration.cpp  Calibration.hpp  VNA_comm.cpp  VNA_comm.hpp
